--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ ul{
     display: inline-block;
     white-space: nowrap;
     border: none;
+    cursor: pointer;
     background: var(--skin-color);
     transition: all 0.3s ease;
 }
@@ -354,8 +355,8 @@ h3.my-profession{
     margin-top: 40px;
 }
 .about .about-content .personal-info .info-item{
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 100%;
+    max-width: 100%;
 }
 .about .about-content .personal-info .info-item p{
     font-size: 16px;
@@ -370,6 +371,21 @@ h3.my-profession{
     margin-left: 4px;
     display: inline-block;
 }
+/*
+.about .about-content .personal-info .info-item .d-flex{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+*/
+.about .about-content .personal-info .info-item p a{
+    font-weight: 400;
+    color: var(--text-black-700);
+    margin-left: 4px;
+    display: inline-block;
+}
+
+
 .about .about-content .personal-info .buttons{
     margin-top: 30px;
 }
@@ -624,6 +640,9 @@ h3.my-profession{
     font-size: 16px;
     line-height: 25px;
     font-weight: 400;
+    color: var(--text-black-700);
+}
+.contact .contact-info-item p a{
     color: var(--text-black-700);
 }
 .contact .contact-form{
