--- a/css/style.css
+++ b/css/style.css
@@ -141,21 +141,81 @@ ul{
     margin-right: -15px;
     position: relative;
 }
-.btn{
-    font-size: 16px;
-    font-weight: 500;
-    padding: 12px 35px;
+.btn1 {
     color: #fff;
-    border-radius: 40px;
+    font-weight: 600;
+    font-size: 16px;
+    text-transform: uppercase;
     display: inline-block;
-    white-space: nowrap;
+    position: relative;
+    overflow: hidden;
+    text-shadow: none;
     border: none;
+    background-color: var(--skin-color);
+    padding: 0 35px;
+    line-height: 46px;
+    border-radius: 30px;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    /* border: 1px solid #ffc78b; */
     cursor: pointer;
-    background: var(--skin-color);
-    transition: all 0.3s ease;
+    z-index: 1;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
 }
-.btn:hover{
-    transform: scale(1.05);
+
+.btn1:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    z-index: -1;
+    background-color: var(--text-black-900);
+    transition: all .5s;
+}
+
+.btn1:after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    z-index: -1;
+    background-color: var(--text-black-900);
+    transition: all .5s;
+}
+
+
+.btn1:focus:before,
+.btn1:hover:before {
+    width: 50%;
+}
+.btn1:focus:after,
+.btn1:hover:after {
+    width: 50%;
+}
+.btn1:hover {
+    color: #fff;
+    transition: 0.3s ease-in-out;
+    border: none;
+    /* background-color: #111; */
+    /* border: 1px solid #111; */
+}
+body.dark .btn1:hover{
+    color: var(--skin-color);
+    transition: 0.3s ease-in-out;
+}
+.btn1 .fa {
+    font-size: 18px;
+    line-height: 18px;
+    padding-left: 7px;
+    font-weight: bold;
 }
 .shadow-dark{
     box-shadow: 0 0 20px rgba(48,46,77, 0.15);
@@ -560,8 +620,10 @@ h3.my-profession{
 .service .service-item .service-item-inner{
     background-color: var(--bg-black-100);
     border: 1px solid var(--bg-black-50);
-    border-right: 10px;
-    padding: 30px 15px;
+/*    border-right: 10px;*/
+    border-radius: 15px;
+    overflow: hidden;
+    padding: 30px 12px;
     text-align: center;
     transition: all 0.3s ease;
 }
@@ -631,6 +693,11 @@ h3.my-profession{
     position: relative;
     transition: all .8s;
 }
+body.dark .portfolio .portfolio-item .portfolio-item-inner{
+    border: 6px solid #c3c3c3;
+}
+
+
 .portfolio .portfolio-item .portfolio-item-inner .portfolio-img{
     width: 100%;
     height: auto;
@@ -721,15 +788,43 @@ h3.my-profession{
     color: #fff;
     transition: all .3s;
 }
+.portfolio .nav-pills .nav-item{
+    margin-right: 10px;
+}
+.portfolio .nav-pills .nav-item:last-child{
+    margin-right: 0px;
+}
 .portfolio .nav-pills .nav-link {
     color: var(--text-black-900);
     font-size: 16px;
     font-weight: 600;
+    padding: 10px 30px;
+    border: 1px solid #fff;
+    background: #fff;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 0px;
+    transition: 0.3s linear;
+    box-shadow: 0 0 20px rgba(48,46,77, 0.15);
 }
-.portfolio .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+.portfolio .nav-pills .nav-link.active, 
+.nav-pills .show>.nav-link,
+.portfolio .nav-pills .nav-link:hover {
     color: var(--bs-nav-pills-link-active-color);
     background-color: var(--skin-color);
+    border: 1px solid var(--skin-color);
+    transition: 0.3s linear;
 }
+body.dark .portfolio .nav-pills .nav-link.active, 
+body.dark .nav-pills .show>.nav-link,
+body.dark .portfolio .nav-pills .nav-link:hover {
+    color: #fff;
+}
+body.dark .portfolio .nav-pills .nav-link {
+    color: var(--skin-color);
+}
+
 
 .gallery-box {
     width: 100%;
@@ -941,16 +1036,23 @@ h3.my-profession{
     color: var(--text-black-700);
     transition: all 0.3s ease;
 }
+
+body.dark .contact .contact-form .form-item .form-control::placeholder{
+    color: #e9e9e9;
+}
+
 .contact .contact-form .form-item .form-control:focus{
     box-shadow: 0 0 20px rgba(48,46,77,0.15);
 }
 .contact .contact-form .form-item textarea.form-control{
     height: 140px;
 }
-.contact .contact-form .btn{
+/*
+.contact .contact-form .btn1{
     height: 50px;
     padding: 0 50px;
 }
+*/
 .text-center{
     text-align: center;
 }
@@ -1074,7 +1176,12 @@ h3.my-profession {
 .portfolio .nav-pills .nav-item{
     display: block;
     width: 100%;
-}     
+    margin-right: 0;
+    margin-bottom: 15px;
+} 
+.portfolio .nav-pills .nav-item:last-child{
+    margin-bottom: 0;
+}
 .portfolio .nav-pills .nav-link{
     display: block;
     width: 100%;
