--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ h3.hello{
     margin: 15px 0;
 }
 h3.hello span{
-    font-family: 'Clicker Script', cursive;
+/*    font-family: 'Clicker Script', cursive;*/
     font-size: 30px;
     font-weight: 700;
     color: var(--skin-color);
@@ -387,10 +387,14 @@ h3.my-profession{
 .home-img::before{
     content: '';
     position: absolute;
-    height: 80px;
-    width: 80px;
-    border-top: 10px solid var(--skin-color);
-    border-left: 10px solid var(--skin-color);
+    height: 60px;
+    width: 60px;
+    border-top: 7px solid var(--skin-color);
+    border-left: 7px solid var(--skin-color);
+/*
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+*/
     left: 20px;
     top: -40px;
 /*
@@ -401,10 +405,10 @@ h3.my-profession{
 .home-img::after{
     content: '';
     position: absolute;
-    height: 80px;
-    width: 80px;
-    border-bottom: 10px solid var(--skin-color);
-    border-right: 10px solid var(--skin-color);
+    height: 60px;
+    width: 60px;
+    border-bottom: 7px solid var(--skin-color);
+    border-right: 7px solid var(--skin-color);
     right: 20px;
     bottom: -40px;
 }
@@ -1186,7 +1190,14 @@ h3.my-profession {
     display: block;
     width: 100%;
 }    
-    
+.personal-info .buttons .btn1{
+    display: block;
+    width: 100%;
+}
+.hire-me{
+    margin-top: 10px;
+        
+}    
     
 }
 
