--- a/css/style.css
+++ b/css/style.css
@@ -336,14 +336,17 @@ body.dark .btn1:hover{
     border-bottom: 1px solid var(--bg-black-50);
     color: var(--text-black-900);
     padding: 5px 15px;
+    transition: 0.3s ease-in-out;
 }
 
 .aside .nav li a.active{
     color:  var(--skin-color);
+    transition: 0.3s ease-in-out;
 }
 
 .aside .nav li a i{
     margin-right: 15px;
+    transition: 0.3s ease-in-out;
 }
 
 /*Home*/
