--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,9 @@ body.dark .btn1:hover{
 
 .aside .nav{
     margin-top: 50px;
+    display: block;
+    /* width: 100%; */
+    /* flex-direction: column; */
 }
 .aside .nav li{
     margin-bottom: 20px;
@@ -1135,6 +1138,189 @@ body.dark .contact .contact-form .form-item .form-control::placeholder{
 .text-center{
     text-align: center;
 }
+
+
+/*Whatsapp Icon*/
+.phone-call {
+    width: 50px;
+    height: 50px;
+    right: 13px;
+    bottom: 15px;
+    background: #10b418;
+    position: fixed;
+    text-align: center;
+    color: #ffffff;
+    cursor: pointer;
+    border-radius: 50%;
+    z-index: 115;
+    display: block;
+    line-height: 65px;
+}
+
+.phone-call img {
+    vertical-align: baseline !important;
+}
+
+/*.phone-call:after {
+    position: absolute;
+    content: "Order On Whatsapp";
+    z-index: -1;
+    top: -15px;
+    left: -15px;
+    background-color: #10b418;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+    opacity: 0.6;
+    -webkit-animation: pulse 1s ease-out;
+    animation: pulse 1.8s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}*/
+
+.phone-call::after {
+    position: absolute;
+    content: "Drop Your Message";
+    z-index: -2;
+    top: 11px;
+    left: -150px;
+    background-color: #fff;
+    border-radius: 100%;
+    line-height: 18px;
+    color: #0c9212;
+    font-size: 13px;
+    font-weight: bolder;
+    padding: 5px 14px 6px 14px;
+    border-radius: 18px;
+    box-shadow: 0px 5px 20px 0 rgb(80 80 80 / 20%);
+    border: 1px solid #25d366;
+    cursor: default;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s ease;
+}
+
+.whatsapp-container:hover .phone-call::after {
+    visibility: visible;
+    opacity: 1;
+    transition: 0.5s ease;
+}
+
+.phone-call:before {
+    position: absolute;
+    content: " ";
+    z-index: -1;
+    top: -15px;
+    left: -15px;
+    background-color: #10b418;
+    width: 80px;
+    height: 80px;
+    border-radius: 100%;
+    animation-fill-mode: both;
+    -webkit-animation-fill-mode: both;
+    opacity: 0.6;
+    -webkit-animation: pulse2 1s ease-out;
+    animation: pulse2 1.8s ease-out;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes pulse2 {
+    0% {
+        -webkit-transform: scale(0);
+        opacity: 0;
+    }
+
+    25% {
+        -webkit-transform: scale(0.3);
+        opacity: 1;
+    }
+
+    50% {
+        -webkit-transform: scale(0.6);
+        opacity: 0.6;
+    }
+
+    75% {
+        -webkit-transform: scale(0.9);
+        opacity: 0.3;
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        opacity: 0;
+    }
+}
+
+@keyframes pulse2 {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+
+    25% {
+        transform: scale(0.3);
+        opacity: 1;
+    }
+
+    50% {
+        transform: scale(0.6);
+        opacity: 0.6;
+    }
+
+    75% {
+        transform: scale(0.9);
+        opacity: 0.3;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
+
+/*  Whatsapp Icon */
+
+/*Scrolltop*/
+
+
+.hide {
+    transform: scale(0, 0);
+}
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    right: 15px;
+    bottom: 75px;
+    background: #111;
+    color: #fff;
+    z-index: 99999;
+    box-shadow: 0px 0px 15px rgb(0 0 0 / 30%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.back-to-top i {
+    font-size: 24px;
+    /* position: absolute;
+    top: 7px;
+    left: 9px;
+    right: 9px; */
+}
+
+.back-to-top:hover i {
+    color: #fff;
+}
+
+/*Scrolltop*/
+
 
 @media (max-width:1199px){
     .aside{
