--- a/css/style.css
+++ b/css/style.css
@@ -630,8 +630,11 @@ h3.my-profession{
 .about .about-content .timeline-box{
     flex: 0 0 100%;
     max-width: 100%;
+    height: 100%;
 }
 .about .about-content .timeline{
+    width: 100%;
+    height: 100%;
     background-color: var(--bg-black-100);
     padding: 30px 15px;
     border: 1px solid var(--bg-black-50);
@@ -700,12 +703,14 @@ h3.my-profession{
     max-width: 33.33%;
 }
 .service .service-item .service-item-inner{
+    width: 100%;
+    height: 100%;
     background-color: var(--bg-black-100);
     border: 1px solid var(--bg-black-50);
 /*    border-right: 10px;*/
     border-radius: 15px;
     overflow: hidden;
-    padding: 30px 12px;
+    padding: 30px 15px;
     text-align: center;
     transition: all 0.3s ease;
 }
@@ -769,7 +774,7 @@ h3.my-profession{
 }
 .portfolio .portfolio-item .portfolio-item-inner{
     border: 6px solid var(--bg-black-100);
-    border-radius: 10px;
+    border-radius: 15px;
 /*    cursor: pointer;*/
     overflow: hidden;
     position: relative;
